--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-name = qiaoxin
-email = qiaoxin@jiehun.com.cn
+name = johson
+email = php.johson@gmail.com
 [alias]
 logg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
     co = checkout
